# lightspark

backends/: audio.cpp  audio.h
backends/interfaces/: IPlugin.h
backends/interfaces/audio/: AudioPlugin.h
backends/interfaces/audio/alsa/: CMakeLists.txt  alsaplugin.cpp  alsaplugin.h
backends/interfaces/audio/pulse/: CMakeLists.txt  PulsePlugin.cpp  PulsePlugin.h
scripting/: flashnet.cpp  flashnet.h
